--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{page.title}}</title>
 
-    <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
 </head>
 <body>
     <h1>Hello Aibou</h1>
