--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     
 
 
-    <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
 </head>
 <body>
     <header>
