--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,11 @@
 
 
     <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
+    <!-- <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen"> -->
 </head>
 <body>
     <header>
-        <h1 class="header-title">相棒</h1>
+        <h1 class="header-title">相棒<span class="header-title-site">site</span></h1>
         <p class="header-author">by Hikaru</p>
     </header>
 
