--- a/styles/index.css
+++ b/styles/index.css
@@ -8,19 +8,36 @@ body{
 header{
     width: 80%;
     margin: auto;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 .header-title{
-    margin-bottom: 0;
+    margin: 0;
+    font-size: 37px;
+    display: flex;
+    align-items: flex-end;
+}
+.header-title-site{
+    font-size: 22px;
+    font-weight: 200;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 7px;
 }
 .header-author{
-    margin-top: 0;
+    margin: 0;
     color: rgb(210, 210, 210);
-    font-size: 15px;
+    font-size: 13px;
 }
 
 
 #content{
     width: 80%;
     margin: auto;
+    margin-top: 40px;
 }
 
+a{
+    color: rgb(95, 173, 255);
+}
