--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,12 @@
 <body>
     <header>
         <h1 class="header-title">相棒<span class="header-title-site">site</span></h1>
-        <p class="header-author">by Hikaru</p>
+        <p class="header-author"><a href="https://github.com/my12parsecs/aibou" target="_blank" style="color: rgb(210, 210, 210);; cursor: pointer;" class="header-author-link">by Hikaru</a></p>
     </header>
+    <div class="menu-bar">
+        <div><a href="https://my12parsecs.github.io/aibou">面白い回</a></div>
+        <div><a href="https://my12parsecs.github.io/aibou/soundtrack">サントラ</a></div>
+    </div>
 
     <div id="content" class="content">
         {{content}}
