--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,8 @@ header{
     width: 80%;
     margin: auto;
     margin-top: 20px;
-    /* display: flex; */
+    display: flex;
+    flex-direction: column;
     /* justify-content: space-between; */
 }
 .header-header{
