--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,11 @@
 
     <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
     <!-- <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen"> -->
+     <style>
+        img{
+            width: 300px;
+        }
+     </style>
 </head>
 <body>
     <header>
