--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,13 @@
         img{
             width: 300px;
         }
+        h2, h3, h4, h5, h6{
+            margin-bottom: 0;
+        }
+
+        p{
+            margin-bottom: 0;
+        }
      </style>
 </head>
 <body>
