--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,10 +42,12 @@
             width: 300px;
         }
         h2, h3, h4, h5, h6{
+            margin-top: 0;
             margin-bottom: 0;
         }
 
         p{
+            margin-top: 0;
             margin-bottom: 0;
         }
      </style>
