--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             width: 300px;
         }
         h2, h3, h4, h5, h6{
-            margin-top: 0;
+            margin-top: 5px;
             margin-bottom: 0;
         }
 
