--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
      <style>
         img{
             width: 300px;
+            margin-top: 10px;
         }
         h2, h3, h4, h5, h6{
             margin-top: 5px;
