--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
         img{
             width: 300px;
             margin-top: 10px;
+            margin-bottom: 10px;
         }
         h2, h3, h4, h5, h6{
             margin-top: 5px;
