--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
     
 
 
-    <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
-    <!-- <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen"> -->
+    <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen">
      <style>
         img{
             width: 300px;
@@ -57,7 +57,7 @@
 <body>
     <header>
         <div class="header-header">
-            <h1 class="header-title">相棒<span class="header-title-site">site</span></h1>
+            <h1 class="header-title"><a href="https://my12parsecs.github.io/aibou" style="color: white; text-decoration: none;">相棒<span class="header-title-site">site</span></a></h1>
             <p class="header-author"><a href="https://github.com/my12parsecs/aibou" target="_blank" style="color: rgb(210, 210, 210);; cursor: pointer;" class="header-author-link">by Hikaru</a></p>
         </div>
         <div class="menu-bar">
