--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body{
 
 header{
     width: 80%;
+    max-width: 1000px;
     margin: auto;
     margin-top: 20px;
     display: flex;
@@ -46,19 +47,27 @@ header{
 
 .menu-bar{
     width: 100%;
+    height: 35px;
     margin: auto;
     margin-top: 10px;
+    padding-left: 15px;
     display: flex;
     /* justify-content: center; */
-    background-color: rgb(75, 75, 75);
-    border-radius: 500px;
+    background-color: rgb(42, 42, 42);
+    border-radius: 600px;
+    display: flex;
+    align-items: center;
 }
 .menu-bar > div{
-    width: 80px;
+    width: 70px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
 }
 .menu-bar > div > a{
     text-decoration: none;
     color: white;
+    font-size: 14px;
     font-weight: 400;
 }
 .menu-bar > div > a:hover{
@@ -72,6 +81,7 @@ header{
 
 #content{
     width: 80%;
+    max-width: 1000px;
     margin: auto;
     margin-top: 40px;
 }
