--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,7 @@
         <div class="menu-bar">
             <div><a href="https://my12parsecs.github.io/aibou">面白い回</a></div>
             <div><a href="https://my12parsecs.github.io/aibou/soundtrack">サントラ</a></div>
+            <div><a href="https://my12parsecs.github.io/aibou/links">リンク集</a></div>
         </div>
     </header>
 
