--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
     <title>{{page.title}}</title>
     <meta name="description" content={{page.desc}}>
-    <meta name="keywords" content="キーワード1, キーワード2, キーワード3"> <!-- ページのキーワード（現在は検索エンジンにほとんど無視されがち） -->
+    <meta name="keywords" content="相棒, ドラマ, 杉下右京"> <!-- ページのキーワード（現在は検索エンジンにほとんど無視されがち） -->
 
 
     <meta name="author" content="Hikaru Imai">
@@ -15,8 +15,8 @@
     <!-- OGP（Open Graph Protocol）メタタグ：FacebookやTwitterでのシェア時に使用 -->
     <meta property="og:title" content={{page.title}}>
     <meta property="og:description" content={{page.desc}}>
-    <meta property="og:image" content="https://example.com/image.jpg">
-    <meta property="og:url" content="https://example.com">
+    <meta property="og:image" content="https://i1.sndcdn.com/artworks-g1Lau54iAapugzzn-GjesHw-t500x500.jpg">
+    <meta property="og:url" content="https://my12parsecs.github.io/aibou">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="サイト名">
     
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content={{page.title}}>
     <meta name="twitter:description" content={{page.desc}}>
-    <meta name="twitter:image" content="https://example.com/image.jpg">
+    <meta name="twitter:image" content="https://i1.sndcdn.com/artworks-g1Lau54iAapugzzn-GjesHw-t500x500.jpg">
     
     
 
