--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
      <style>
         img{
             width: 300px;
+            margin: auto;
             margin-top: 12px;
             margin-bottom: 12px;
         }
