--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
     
 
 
-    <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen">
-    <!-- <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="/aibou/styles/index.css" media="screen"> -->
+    <link rel="stylesheet" type="text/css" href="/styles/index.css" media="screen">
      <style>
         img{
             width: 300px;
