--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
     <title>{{page.title}}</title>
     <meta name="description" content={{page.desc}}>
-    <meta name="keywords" content="相棒, ドラマ, 杉下右京"> <!-- ページのキーワード（現在は検索エンジンにほとんど無視されがち） -->
+    <meta name="keywords" content="相棒, ドラマ, 杉下右京">
 
 
     <meta name="author" content="Hikaru Imai">
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://i1.sndcdn.com/artworks-g1Lau54iAapugzzn-GjesHw-t500x500.jpg">
     <meta property="og:url" content="https://my12parsecs.github.io/aibou">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="サイト名">
+    <meta property="og:site_name" content="相棒の面白い回">
     
     <!-- Twitter用メタタグ -->
     <meta name="twitter:card" content="summary_large_image">
